[package]
name = "peer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = { version = "1.0" }
console_error_panic_hook = { version = "0.1", optional = true }
futures-channel = "0.3"
js-sys = "0.3"
serde_json = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
protocol = { path = "../protocol" }

[dependencies.web-sys]
version = "0.3"
features = [
    "WebSocket",
    "ErrorEvent",
    "MessageEvent",
    "RtcPeerConnection",
    "RtcSignalingState",
    "RtcSdpType",
    "RtcSessionDescriptionInit",
    "RtcPeerConnectionIceEvent",
    "RtcIceCandidate",
    "Navigator",
    "RtcConfiguration",
    "MediaDevices",
    "Window",
    "MediaStreamConstraints",
    "Document",
    "HtmlVideoElement",
    "MediaStream",
    "MediaStreamTrack",
    "RtcRtpSender",
    "RtcIceConnectionState",
    "RtcTrackEvent",
    "RtcIceCandidateInit",
]
